--- a/index.html
+++ b/index.html
@@ -460,8 +460,8 @@
         <div class="footer__bg">
             <div class="footer__container container grid">
                 <div>
-                    <h1 class="footer__title">Prashanna Sathiyamoorthy</h1>
-                    <span class="footer__subtitle">Data Analyst</span>
+                    <h1 class="footer__title">Arindran.M</h1>
+                    <span class="footer__subtitle">Full stack developer</span>
                 </div>
 
                 <ul class="footer__links">
@@ -477,14 +477,14 @@
                 </ul>
 
                 <div class="footer__socials">
-                    <a href=https://www.facebook.com/prashanna.drashan" target="_blank" class="footer__social">
-                        <i class="uil uil-facebook"></i>
-                    </a>
-                    <a href="https://www.instagram.com/prashanna01/" target="_blank" class="footer__social">
+                    <a href="https://www.instagram.com/_im.arin_10_?igsh=MWR6YXR2cXc3cjNrZA==" target="_blank" class="footer__social">
                         <i class="uil uil-instagram"></i>
                     </a>
-                    <a href="https://twitter.com/prashanna01" target="_blank" class="footer__social">
-                        <i class="uil uil-twitter-alt"></i>
+                    <a href="https://www.linkedin.com/in/arindran10?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="footer__social">
+                        <i class="uil uil-linkedin-alt"></i>
+                    </a>
+                    <a href="https://github.com/Arindran10" target="_blank" class="footer__social">
+                        <i class="uil uil-github-alt"></i>
                     </a>
                 </div>
             </div>
